--- a/src/components/pages/productDetail/productDetail.css
+++ b/src/components/pages/productDetail/productDetail.css
@@ -9,7 +9,7 @@
 .form{
     margin-left: 250px;
     margin-top: 50px;
-    background-color: powderblue;
+    background-color:#45695e;
     padding: 25px;
     margin-right: 90px;
     
